Fatto api Checkout
